--- a/mesh_generator/geometry_p1.yaml
+++ b/mesh_generator/geometry_p1.yaml
@@ -1,13 +1,16 @@
 geometry:
   boundary:
-    - [0.0, 0.0]
-    - [1.0, 0.0]
-    - [1.0, 1.0]
-    - [0.0, 1.0]
+    - [0.0, -2.0]
+    - [0.0, -2.0]
+    - [60.0, -3.0]
+    - [60.0, 3.0]
+    - [0.0, 2.0]
   holes:
     # if no holes--> leave empty
     # - center: [0.5, 0.5]
     #   radius: 0.3
 
 mesh:
-  area: 0.5
+  area: 100
+
+num-dim: 2
