--- a/loading.yaml
+++ b/loading.yaml
@@ -1,9 +1,15 @@
 Boundary:
   # node#-dof#-disp:
   node_dof_disp:
-  - [1, 1, 0.0]
-  - [1, 2, 0.0]
-  - [4, 1, 0.0]
+  - []
   # elem#-face#-trac:
   elem_face_trac:
-  - [2, 1, 10.0, 0.0]
+  - []
+  # node#-dof#-forces:
+  node_dof_forces:
+  - [0 ,0, -2500000.0]
+  - [3 ,0, 2500000.0]
+  - [5 ,0, -2500000.0]
+  - [4 ,0, 2500000.0]
+  - [1 ,0, -2500000.0]
+  - [2 ,0, 2500000.0]
