--- a/mesh_generator/Problem1/geometry.yaml
+++ b/mesh_generator/Problem1/geometry.yaml
@@ -1,35 +1,36 @@
 Element:
   elem-conn:
-  - [7, 25, 8]
-  - [24, 3, 4]
-  - [12, 10, 11]
-  - [27, 7, 8]
-  - [21, 19, 20]
-  - [11, 13, 18]
-  - [15, 6, 1]
-  - [12, 9, 10]
-  - [17, 18, 13]
-  - [26, 9, 25]
-  - [18, 17, 14]
-  - [14, 17, 16]
-  - [15, 1, 17]
-  - [1, 16, 17]
-  - [1, 2, 16]
-  - [13, 15, 17]
-  - [14, 12, 18]
-  - [11, 18, 12]
-  - [28, 19, 27]
-  - [22, 24, 23]
-  - [25, 7, 26]
-  - [23, 21, 22]
-  - [21, 20, 22]
-  - [4, 5, 23]
-  - [23, 24, 4]
-  - [9, 26, 10]
-  - [19, 28, 20]
-  - [27, 8, 28]
+  - [6, 24, 7]
+  - [23, 2, 3]
+  - [11, 9, 10]
+  - [26, 6, 7]
+  - [20, 18, 19]
+  - [10, 12, 17]
+  - [14, 5, 0]
+  - [11, 8, 9]
+  - [16, 17, 12]
+  - [25, 8, 24]
+  - [17, 16, 13]
+  - [13, 16, 15]
+  - [14, 0, 16]
+  - [0, 15, 16]
+  - [0, 1, 15]
+  - [12, 14, 16]
+  - [13, 11, 17]
+  - [10, 17, 11]
+  - [27, 18, 26]
+  - [21, 23, 22]
+  - [24, 6, 25]
+  - [22, 20, 21]
+  - [20, 19, 21]
+  - [3, 4, 22]
+  - [22, 23, 3]
+  - [8, 25, 9]
+  - [18, 27, 19]
+  - [26, 7, 27]
   num-elem: 28
   num-elem-node: 3
+  type: TriangularElement
 NODE:
   nodal-coord:
   - [0.0, 0.0]
