--- a/mesh_generator/Problem2/geometry.yaml
+++ b/mesh_generator/Problem2/geometry.yaml
@@ -1,86 +1,87 @@
 Element:
   elem-conn:
-  - [6, 27, 31]
-  - [32, 2, 3]
-  - [23, 11, 9]
-  - [54, 55, 58]
-  - [14, 51, 62]
-  - [13, 3, 42]
-  - [37, 48, 17]
-  - [38, 25, 32]
-  - [4, 2, 28]
-  - [9, 29, 23]
-  - [30, 13, 26]
-  - [38, 21, 25]
-  - [29, 9, 10]
-  - [13, 12, 26]
-  - [61, 52, 8]
-  - [19, 23, 29]
-  - [48, 16, 56]
-  - [6, 10, 44]
-  - [21, 38, 50]
-  - [50, 63, 56]
-  - [53, 35, 60]
-  - [30, 3, 13]
-  - [22, 30, 26]
-  - [29, 31, 37]
-  - [24, 31, 27]
-  - [17, 19, 29]
-  - [6, 5, 27]
-  - [32, 3, 30]
-  - [10, 6, 31]
-  - [24, 37, 31]
-  - [22, 18, 38]
-  - [28, 32, 25]
-  - [37, 24, 20]
-  - [31, 29, 10]
-  - [2, 32, 28]
-  - [32, 30, 38]
-  - [57, 34, 58]
-  - [34, 39, 54]
-  - [35, 41, 49]
-  - [49, 41, 47]
-  - [48, 37, 20]
-  - [17, 29, 37]
-  - [22, 38, 30]
-  - [21, 50, 16]
-  - [39, 42, 45]
-  - [45, 40, 39]
-  - [3, 2, 45]
-  - [43, 47, 46]
-  - [10, 46, 47]
-  - [44, 10, 47]
-  - [10, 9, 46]
-  - [3, 45, 42]
-  - [41, 44, 47]
-  - [49, 47, 43]
-  - [16, 48, 20]
-  - [15, 17, 48]
-  - [43, 36, 49]
-  - [35, 49, 36]
-  - [38, 18, 50]
-  - [56, 63, 15]
-  - [62, 1, 14]
-  - [35, 36, 60]
-  - [52, 61, 53]
-  - [39, 40, 54]
-  - [58, 33, 57]
-  - [48, 56, 15]
-  - [54, 40, 55]
-  - [16, 50, 56]
-  - [54, 58, 34]
-  - [33, 51, 57]
-  - [55, 33, 58]
-  - [52, 53, 60]
-  - [51, 33, 59]
-  - [36, 52, 60]
-  - [7, 53, 61]
-  - [8, 7, 61]
-  - [51, 59, 62]
-  - [1, 62, 59]
-  - [50, 18, 63]
+  - [5, 26, 30]
+  - [31, 1, 2]
+  - [22, 10, 8]
+  - [53, 54, 57]
+  - [13, 50, 61]
+  - [12, 2, 41]
+  - [36, 47, 16]
+  - [37, 24, 31]
+  - [3, 1, 27]
+  - [8, 28, 22]
+  - [29, 12, 25]
+  - [37, 20, 24]
+  - [28, 8, 9]
+  - [12, 11, 25]
+  - [60, 51, 7]
+  - [18, 22, 28]
+  - [47, 15, 55]
+  - [5, 9, 43]
+  - [20, 37, 49]
+  - [49, 62, 55]
+  - [52, 34, 59]
+  - [29, 2, 12]
+  - [21, 29, 25]
+  - [28, 30, 36]
+  - [23, 30, 26]
+  - [16, 18, 28]
+  - [5, 4, 26]
+  - [31, 2, 29]
+  - [9, 5, 30]
+  - [23, 36, 30]
+  - [21, 17, 37]
+  - [27, 31, 24]
+  - [36, 23, 19]
+  - [30, 28, 9]
+  - [1, 31, 27]
+  - [31, 29, 37]
+  - [56, 33, 57]
+  - [33, 38, 53]
+  - [34, 40, 48]
+  - [48, 40, 46]
+  - [47, 36, 19]
+  - [16, 28, 36]
+  - [21, 37, 29]
+  - [20, 49, 15]
+  - [38, 41, 44]
+  - [44, 39, 38]
+  - [2, 1, 44]
+  - [42, 46, 45]
+  - [9, 45, 46]
+  - [43, 9, 46]
+  - [9, 8, 45]
+  - [2, 44, 41]
+  - [40, 43, 46]
+  - [48, 46, 42]
+  - [15, 47, 19]
+  - [14, 16, 47]
+  - [42, 35, 48]
+  - [34, 48, 35]
+  - [37, 17, 49]
+  - [55, 62, 14]
+  - [61, 0, 13]
+  - [34, 35, 59]
+  - [51, 60, 52]
+  - [38, 39, 53]
+  - [57, 32, 56]
+  - [47, 55, 14]
+  - [53, 39, 54]
+  - [15, 49, 55]
+  - [53, 57, 33]
+  - [32, 50, 56]
+  - [54, 32, 57]
+  - [51, 52, 59]
+  - [50, 32, 58]
+  - [35, 51, 59]
+  - [6, 52, 60]
+  - [7, 6, 60]
+  - [50, 58, 61]
+  - [0, 61, 58]
+  - [49, 17, 62]
   num-elem: 79
   num-elem-node: 3
+  type: TriangularElement
 NODE:
   nodal-coord:
   - [0.0, 21.0]
