--- a/mesh_generator/geometry_p3.yaml
+++ b/mesh_generator/geometry_p3.yaml
@@ -1,17 +1,29 @@
 geometry:
   boundary:
-    - [0.0, 0.0]
-    - [0.0, -30]
-    - [60.0, -30]
-    - [60.0, 0]
-    - [60.0, 30]
-    - [0.0, 30.]
+    - [0.0, -0.5]
+    - [0.125, -0.5]
+    - [0.25, -0.5]
+    - [0.375, -0.5]
+    - [0.5, -0.5]
+    - [0.625, -0.5]
+    - [0.75, -0.5]
+    - [0.875, -0.5]
+    - [1.0, -0.5]
+    - [1.0, 0.5]
+    - [0.875, 0.5]
+    - [0.75, 0.5]
+    - [0.625, 0.5]
+    - [0.5, 0.5]
+    - [0.375, 0.5]
+    - [0.25, 0.5]
+    - [0.125, 0.5]
+    - [0.0, 0.5]
   holes:
     # if no holes--> leave empty
-    - center: [30, 0]
-      radius: 12
+    - center: [0.5, 0]
+      radius: 5.e-2
 
 mesh:
-  area: 20
+  area: 0.1
 
 num-dim: 2
